# gr_synth

./: .env.example  .gitignore  README.md  get_data.sh  merge_shards.sh  pyproject.toml
scripts/: check_dups.py  profile_prefilter.py  read_shards.py  upload_merged.py
src/gr_synth/: agent.py  checkpoint.py  cli.py  config.py  filters.py  generate.py  prompts.py  shard.py  source.py  types.py  upload.py
src/gr_synth_data/: generate.py  prompts.py
tests/: test_agent.py
