[project]
name = "gr-synth"
version = "0.1.0"
description = "Greek synthetic pre-training data via Pydantic AI + vLLM, sharded to the HuggingFace Hub."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic-ai",
    "pydantic-settings",
    "openai",
    "datasets",
    "huggingface-hub",
    "pyarrow>=17",
    "fasttext-wheel",
    "datasketch>=1.6",
    "python-dotenv",
    "regex>=2024.5",
    "typer>=0.12",
    "numpy",
    "polars>=1.40.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gr_synth"]

[project.scripts]
gr-synth = "gr_synth.cli:app"
